# tutorials

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bars.py  bars2elasticsearch.py  bars2postgresql.py  book_build.py  bulldozer2elasticsearch.py  bulldozer2postgresql.py  cfg.json  common.py  dashboard.json  dashboard_cfg.json  deploy.py  docker-compose.yml  docker-entrypoint.sh  embedded.json  export.ndjson  fakevenue.py  gui.py  layout.py  market-data1.sh  market-data2_1.sh  market-data2_2.sh  oms1.ini  orders.py  postgres.py  postgresql_debian.docker  reference.py  requirements.txt  signals.py  sim.py  simulator.py  stop-supervisor.sh  supervisord.conf  syncer-sink.ini  syncer-source.ini  tutorial1.docker  tutorial2_1.docker  (+3 more)
.github/workflows/: cmake-pr.yml  rel-pub.yml
dashboard/: README.md  bulldozer2postgresql.py  tutorial1.docker
docker/: docker-entrypoint.sh  postgresql_debian.docker
docs/: README.md  market-data01-feedhandler.md  market-data02-consolidated.md
market-data01-feedhandler/: CMakeLists.txt  README.md  README1.md  binance-feed-handler.cpp  binance-feed.cpp  binance-view.py  feed-perf.cpp  minimal-ws-client-binance.c  requirements.txt  securities.txt  securities1.txt  securities2.txt
market-data02-consolidated/: CMakeLists.txt  README.md  binance-feed-handler.hpp  binance.cpp  book-dump.py  coinbase-feed-handler.cpp  common.hpp  component.cpp  feed-handler-component.cpp  feed-handler-one.json  feed-handler-two.json  feed-handler.cpp  feed-handler.hpp  feed-handler.json  feed-parser.cpp  feed-parser.json  feed.cpp  feed.json  kraken-feed-handler.cpp  kraken-feed-handler.hpp  kraken-parser.hpp  kraken.cpp  ore-dump.py  parser.cpp  requirements.txt  securities.txt  trade-view-sim.py  trade-view.py
market-data02-distribution/: README.md
market-data03-capture/: README.md
ordersgui/: README.md  bulldozer_coinbase.ini  cfg.json  gui.py  layout.py  orders.py  orders_extractor.py  orders_extractor_multiprocessing.py  symb.py  test.py
python/: CMakeLists.txt  setup.py
python/scripts/: test-tutorials-python
python/src/: __init__.py
python/tests/: marketdata02consolidated.py
testdir/: cfg.json
tutorial1/: README.md  bars.py  bars2postgresql.py  book_build.py  bulldozer2postgresql.py  dashboard_cfg.json  docker-entrypoint.sh  postgresql.docker  stack.docker
